--- a/core/components/eventsx/docs/changelog.txt
+++ b/core/components/eventsx/docs/changelog.txt
@@ -1,3 +1,7 @@
+EventsX 0.1.0 Alpha3
+====================================
+- EventsX snippet now also shows events starting today
+
 EventsX 0.1.0 Alpha2
 ====================================
 - Fixed hasEvents typo in calendar.js
